# sts_core_utils

./: CMakeLists.txt  LICENSE  package.xml
include/sts_core_utils/sts_core/sts_base/: sts_core_node.h
include/sts_core_utils/sts_core/sts_io/: sts_io.h
include/sts_core_utils/sts_core/utils/: betterEnums.h
src/sts_core/sts_base/: sts_core_node.cpp
src/sts_core/sts_io/: sts_io.cpp
